# evo-islands

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: Cargo.toml  Dockerfile
client/src/: client.rs  main.rs  tui.rs
gha/: README.md
k8s/: client-deployment.yaml  server-deployment.yaml
server/: Cargo.toml  Dockerfile
server/src/: gene_pool.rs  main.rs  server.rs  web.rs
server/static/: index.html
shared/: Cargo.toml
shared/src/: genes.rs  lib.rs  protocol.rs
sim/: Cargo.toml
sim/src/: creature.rs  island.rs  lib.rs  world.rs
