[workspace]
resolver = "2"
members = [
    "shared",
    "sim",
    "server",
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EvoIslands Contributors"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }

# Client dependencies
ratatui = "0.26"
crossterm = "0.27"

# Testing
proptest = "1.4"
