[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
sim = { path = "../sim" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
