[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
sim = { path = "../sim" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
reqwest.workspace = true
