[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
